--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
         <title>Diseñando la universidad de la Felicidad</title>
 
         <link rel="stylesheet" href="./ccs/style.css">
-
     </head>
     <body>
         <header>
-            <h1>Festival de la Felicidad</h1>
+            <h1>Festival la Universidad de la Felicidad</h1>
             <p class="subtitle">Una experiencia transformadora que conecta tecnología, bienestar y comunidad</p>
         </header>
         <main>
@@ -19,11 +18,48 @@
                 <h3>Apertura del Festival</h3>
                 <div class="gallery-main-image" id="mainImageApertura"></div>
                 <div class="angle-selector">
-                    <button class="angle-option active" onclick="changeAngle('apertura', 'vicerrector', this)">Vicerrector</button>
-                    <button class="angle-option" onclick="changeAngle('apertura', 'organizador', this)">Organizador></button>
-                    <button class="angle-option" onclick="changeAngle('apertura', 'himno', this)">Vista Público></button>
+                    <button class="angle-option active" onclick="changeAngle('apertura', 'vicerrector', this)">1</button>
+                    <button class="angle-option" onclick="changeAngle('apertura', 'organizador', this)">2</button>
+                    <button class="angle-option" onclick="changeAngle('apertura', 'himno', this)">3</button>
                 </div>
+                <p>Palabras de bienvenida del Vicerrector Jorge Caro y el profesor Samuel Prieto, estableciendo el tono para un día de reflexión sobre felicidad y tecnología.</p>
             </section>
+
+            <section class="gallery">
+                <h3>Música con IA para Niños</h3>
+                <div class="gallery-main-image" id="mainImageApertura"></div>
+                <div class="angle-selector">
+                    <button class="angle-option active" onclick="changeAngle('musica', 'm1', this)">1</button>
+                    <button class="angle-option" onclick="changeAngle('musica', 'm2', this)">2</button>
+                    <button class="angle-option" onclick="changeAngle('musica', 'm3', this)">3</button>
+                    <button class="angle-option" onclick="changeAngle('musica', 'm4', this)">4</button>
+                    <button class="angle-option" onclick="changeAngle('musica', 'm5', this)">5</button>
+                </div>
+                <p>Alexander Taborda presentó su proyecto de inteligencia artificial musical para crear vínculos emocionales con niños de 0-2 años.</p>
+            </section>
+
+            <section class="gallery">
+                <h3>Presentación Cultural</h3>
+                <div class="gallery-main-image" id="mainImageApertura"></div>
+                <div class="angle-selector">
+                    <button class="angle-option active" onclick="changeAngle('cultural', 'c1', this)">1</button>
+                    <button class="angle-option" onclick="changeAngle('cultural', 'c2', this)">2</button>
+                    <button class="angle-option" onclick="changeAngle('cultural', 'c3', this)">3</button>
+                </div>
+                <p>El grupo folklórico universitario compartió instrumentos y danzas tradicionales, mostrando la diversidad cultural como fuente de felicidad colectiva.</p>
+            </section>
+
+            <section class="gallery">
+                <h3>Galería Digital Universitaria</h3>
+                <div class="gallery-main-image" id="mainImageApertura"></div>
+                <div class="angle-selector">
+                    <button class="angle-option active" onclick="changeAngle('galeria', 'g1', this)">1</button>
+                </div>
+                <p>Juan José, estudiante de ingeniería de sistemas, presentó su plataforma web para preservar la memoria cultural de los eventos universitarios.</p>
+            </section>
+
+
+
 
         </main>
 
