Update index.html - line js

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <section class="gallery">
                 <h3>Música con IA para Niños</h3>
-                <div class="gallery-main-image" id="mainImageApertura"></div>
+                <div class="gallery-main-image" id="mainImageMusica"></div>
                 <div class="angle-selector">
                     <button class="angle-option active" onclick="changeAngle('musica', 'm1', this)">1</button>
                     <button class="angle-option" onclick="changeAngle('musica', 'm2', this)">2</button>
@@ -40,7 +40,7 @@
 
             <section class="gallery">
                 <h3>Presentación Cultural</h3>
-                <div class="gallery-main-image" id="mainImageApertura"></div>
+                <div class="gallery-main-image" id="mainImageCultural"></div>
                 <div class="angle-selector">
                     <button class="angle-option active" onclick="changeAngle('cultural', 'c1', this)">1</button>
                     <button class="angle-option" onclick="changeAngle('cultural', 'c2', this)">2</button>
@@ -51,7 +51,7 @@
 
             <section class="gallery">
                 <h3>Galería Digital Universitaria</h3>
-                <div class="gallery-main-image" id="mainImageApertura"></div>
+                <div class="gallery-main-image" id="mainImageGaleria"></div>
                 <div class="angle-selector">
                     <button class="angle-option active" onclick="changeAngle('galeria', 'g1', this)">1</button>
                 </div>
@@ -64,7 +64,8 @@
         </main>
 
         <footer>
-
+            <p>Festival la Universidad de la Felicidad - Universidad del Magdalena - 2025</p>
         </footer>
+        <script src="/js/slide.js"></script>
     </body>
 </html>
