Update index.html probando rutas

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <title>Diseñando la universidad de la Felicidad</title>
 
-        <link rel="stylesheet" href="./ccs/style.css">
+        <link rel="stylesheet" href="/ccs/style.css">
     </head>
     <body>
         <header>
@@ -66,6 +66,6 @@
         <footer>
             <p>Festival la Universidad de la Felicidad - Universidad del Magdalena - 2025</p>
         </footer>
-        <script src="/js/slide.js"></script>
+        <script src="./js/slide.js"></script>
     </body>
 </html>
